<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_estadio" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/panel"
                        android:src="@drawable/panel_solar"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="48sp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout1"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <TextView
                        android:id="@+id/datos_estadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abril_fatface"
                        android:gravity="center"
                        android:text="@string/datos_"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/establecimiento"/>
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:background="@drawable/rounded_edittext"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:minHeight="48dp"
                    android:text="@string/consumo_mensual"/>
                <EditText
                    android:id="@+id/editTextConsumoMensual"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rounded_edittext"/>
            </LinearLayout>
            <!--
            <EditText
                android:id="@+id/editTextConsumoAnual"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="numberDecimal" />
            <EditText
                android:id="@+id/editTextConsumoHora"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="numberDecimal" />
            <EditText
                android:id="@+id/editTextCantidaPaneles"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="numberDecimal" />
            -->

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue_01"
                android:gravity="center"
                android:text="@string/enviar_datos"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>