<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_darling"
    android:padding="8dp"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass,MissingConstraints">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/panel"
                    android:src="@drawable/panel_solar"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="48sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:id="@+id/layout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/name"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="text"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/surname"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="text"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="150dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/email"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="textEmailAddress"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="230dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/phone"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="310dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/pass"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="390dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/abril_fatface"
                            android:text="@string/confirm_pass"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/conf_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/rounded_edittext"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:padding="10dp"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/errors"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:lineSpacingExtra="8sp"
                            android:padding="5dp"
                            android:text="TextView"
                            android:textColor="#B71C1C"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/layout10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="80dp"
                            android:gravity="center"
                            app:layout_constraintTop_toBottomOf="@+id/Layout9">

                            <Button
                                android:id="@+id/btn_registrado"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="20dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/blue_01"
                                android:text="@string/register"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btn_login"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/blue_01"
                                android:text="@string/login"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>